config-root/namespaces/jx-staging/php-helloworld/php-helloworld-php-helloworld-deploy.yaml
# Source: php-helloworld/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-helloworld-php-helloworld
  labels:
    draft: draft-app
    chart: "php-helloworld-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: php-helloworld-php-helloworld
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: php-helloworld-php-helloworld
    spec:
      serviceAccountName: php-helloworld-php-helloworld
      containers:
        - name: php-helloworld
          image: "ghcr.io/denglanlan/php-helloworld:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
