config-root/namespaces/jx-staging/php-helloworld/php-helloworld-ingress.yaml
# Source: php-helloworld/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: php-helloworld
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: php-helloworld
              servicePort: 80
      host: php-helloworld-jx-staging.jx3.sky-cloud.net
